--- a/Themes/DarkTheme/android/res/values/colors.xml
+++ b/Themes/DarkTheme/android/res/values/colors.xml
@@ -39,4 +39,24 @@
     <color name="toast_bg_color">#cc121212</color>
     <color name="toast_text_color">@android:color/white</color>-->
 
+    <!-- Device default colors -->
+    <color name="material_grey_900">#80000000</color>
+    <color name="material_grey_850">#80000000</color>
+    <color name="material_grey_800">#80000000</color>
+    <color name="background_device_default_light">#80000000</color>
+    <color name="background_floating_device_default_dark">#80000000</color>
+    <color name="error_color_device_default_dark">#ffae2317</color>
+    <color name="error_color_device_default_light">#ffae2317</color>
+    <color name="primary_dark_device_default_dark">#80000000</color>
+    <color name="primary_dark_device_default_settings">#80000000</color>
+    <color name="primary_dark_device_default_settings_light">#80000000</color>
+    <color name="primary_device_default_dark">#80000000</color>
+    <color name="primary_device_default_settings">#80000000</color>
+    <color name="primary_device_default_settings_light">#80000000</color>
+    <color name="quaternary_device_default_settings">#ff9e9e9e</color>
+    <color name="secondary_device_default_settings">#80000000</color>
+    <color name="system_error">#ffea4335</color>
+    <color name="tertiary_device_default_settings">#ff616161</color>
+    <color name="background_material_dark">#80000000</color>
+
 </resources>
