--- a/Themes/DarkTheme/android/res/values/styles.xml
+++ b/Themes/DarkTheme/android/res/values/styles.xml
@@ -10,50 +10,50 @@
     </style>
     <style name="Theme.DeviceDefault.Settings" parent="@*android:style/Theme.Material">
         <item name="android:actionBarTheme">@*android:style/ThemeOverlay.DeviceDefault.ActionBar.Accent</item>
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
         <item name="android:colorEdgeEffect">#ffffffff</item>
-        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings</item>
+        <item name="android:colorSecondary">@*android:color/transparent</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_dark</item>
         <item name="android:navigationBarColor">@*android:color/primary_device_default_dark</item>
         <item name="android:textColorPrimaryInverse">@*android:color/background_material_dark</item>
         <item name="android:windowShowWallpaper">true</item>
     </style>
     <style name="Theme.Material.Settings.BaseDialog" parent="@*android:style/Theme.Material.BaseDialog">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.Material.Settings.CompactMenu" parent="@*android:style/Theme.Material.CompactMenu">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.Material.Settings.Dialog.BaseAlert" parent="@*android:style/Theme.Material.Dialog.BaseAlert">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.Material.Settings.DialogWhenLarge" parent="@*android:style/Theme.Material.DialogWhenLarge">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.Material.Settings.DialogWhenLarge.NoActionBar" parent="@*android:style/Theme.Material.DialogWhenLarge.NoActionBar">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.Material.Settings.Dialog.Presentation" parent="@*android:style/Theme.Material.Dialog.Presentation">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.DeviceDefault.QuickSettings.Dialog" parent="@*android:style/Theme.DeviceDefault.Dialog">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
-        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
+        <item name="android:colorSecondary">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog" parent="@*android:style/Theme.Material.Dialog">
@@ -200,12 +200,13 @@
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
     </style>
     <style name="Theme.DeviceDefault.Light.NoActionBar" parent="@*android:style/Theme.Material.NoActionBar">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimary">@*android:color/transparent</item>
+        <item name="android:colorPrimaryDark">@*android:color/transparent</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_dark</item>
-        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings</item>
+        <item name="android:colorSecondary">@*android:color/transparent</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_dark</item>
         <item name="android:textColorPrimaryInverse">@*android:color/background_material_dark</item>
+        <item name="android:windowShowWallpaper">true</item>		
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.Alert" parent="@*android:style/Theme.Material.Dialog.Alert">
         <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
